mywork/force-app/main/default/objects/Account_Snapshot__c/Account_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Account Snapshot</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Snapshots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>