mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Sample_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Checkbox</label>
    <type>Checkbox</type>
</CustomField>