mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sample_Currency__c</fullName>
    <label>Sample Currency</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>