mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sample_Date_Time__c</fullName>
    <label>Sample Date Time</label>
    <type>DateTime</type>
</CustomField>