mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Email__c.field-meta.xml
<CustomField>
    <fullName>Sample_Email__c</fullName>
    <label>Sample Email</label>
    <type>Email</type>
</CustomField>