mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Encrypted_Text__c.field-meta.xml
<CustomField>
    <fullName>Sample_Encrypted_Text__c</fullName>
    <label>Sample Encrypted Text</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>