mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Integer__c.field-meta.xml
<CustomField>
    <fullName>Sample_Integer__c</fullName>
    <label>Sample Integer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>