mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Multi_picklist__c.field-meta.xml
<CustomField>
    <fullName>Sample_Multi_picklist__c</fullName>
    <label>Sample Multi picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>