mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Number__c.field-meta.xml
<CustomField>
    <fullName>Sample_Number__c</fullName>
    <label>Sample Number</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>