mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sample_Percent__c</fullName>
    <label>Sample Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>