mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sample_Phone__c</fullName>
    <label>Sample Phone</label>
    <type>Phone</type>
</CustomField>