mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sample_Picklist__c</fullName>
    <label>Sample Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>