mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Sample_Rich_Text__c</fullName>
    <label>Sample Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>