mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text_Area__c</fullName>
    <label>Sample Text Area</label>
    <type>TextArea</type>
</CustomField>