mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text_Area_Long__c</fullName>
    <label>Sample Text Area Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>