mywork/force-app/main/default/objects/Account_Snapshot__c/fields/Sample_URL__c.field-meta.xml
<CustomField>
    <fullName>Sample_URL__c</fullName>
    <label>Sample URL</label>
    <type>Url</type>
</CustomField>